--- a/DB/DBConn.ipynb
+++ b/DB/DBConn.ipynb
@@ -75,15 +75,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "help(df.to_sql)"
    ]
   },
@@ -109,388 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql+psycopg2://postgres:***@localhost/RetailDB\n",
-      "5 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>id</th>\n",
-       "            <th>order_id</th>\n",
-       "            <th>sequence</th>\n",
-       "            <th>company_id</th>\n",
-       "            <th>currency_id</th>\n",
-       "            <th>order_partner_id</th>\n",
-       "            <th>salesman_id</th>\n",
-       "            <th>product_id</th>\n",
-       "            <th>product_uom</th>\n",
-       "            <th>product_packaging_id</th>\n",
-       "            <th>create_uid</th>\n",
-       "            <th>write_uid</th>\n",
-       "            <th>state</th>\n",
-       "            <th>display_type</th>\n",
-       "            <th>qty_delivered_method</th>\n",
-       "            <th>invoice_status</th>\n",
-       "            <th>analytic_distribution</th>\n",
-       "            <th>name</th>\n",
-       "            <th>product_uom_qty</th>\n",
-       "            <th>price_unit</th>\n",
-       "            <th>discount</th>\n",
-       "            <th>price_reduce</th>\n",
-       "            <th>price_subtotal</th>\n",
-       "            <th>price_total</th>\n",
-       "            <th>price_reduce_taxexcl</th>\n",
-       "            <th>price_reduce_taxinc</th>\n",
-       "            <th>qty_delivered</th>\n",
-       "            <th>qty_invoiced</th>\n",
-       "            <th>qty_to_invoice</th>\n",
-       "            <th>untaxed_amount_invoiced</th>\n",
-       "            <th>untaxed_amount_to_invoice</th>\n",
-       "            <th>is_downpayment</th>\n",
-       "            <th>is_expense</th>\n",
-       "            <th>create_date</th>\n",
-       "            <th>write_date</th>\n",
-       "            <th>price_tax</th>\n",
-       "            <th>product_packaging_qty</th>\n",
-       "            <th>customer_lead</th>\n",
-       "            <th>route_id</th>\n",
-       "            <th>linked_line_id</th>\n",
-       "            <th>shop_warning</th>\n",
-       "            <th>planning_hours_planned</th>\n",
-       "            <th>planning_hours_to_plan</th>\n",
-       "            <th>is_service</th>\n",
-       "            <th>project_id</th>\n",
-       "            <th>task_id</th>\n",
-       "            <th>reservation_begin</th>\n",
-       "            <th>start_date</th>\n",
-       "            <th>is_rental</th>\n",
-       "            <th>return_date</th>\n",
-       "            <th>qty_returned</th>\n",
-       "            <th>parent_line_id</th>\n",
-       "            <th>pricing_id</th>\n",
-       "            <th>has_displayed_warning_upsell</th>\n",
-       "            <th>remaining_hours</th>\n",
-       "            <th>fsm_lot_id</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>10</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>11</td>\n",
-       "            <td>6</td>\n",
-       "            <td>42</td>\n",
-       "            <td>1</td>\n",
-       "            <td>None</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>draft</td>\n",
-       "            <td>None</td>\n",
-       "            <td>stock_move</td>\n",
-       "            <td>no</td>\n",
-       "            <td>None</td>\n",
-       "            <td>[FURN_6666] Acoustic Bloc Screens</td>\n",
-       "            <td>3.00</td>\n",
-       "            <td>295.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>295.00</td>\n",
-       "            <td>885.00</td>\n",
-       "            <td>885.00</td>\n",
-       "            <td>295.00</td>\n",
-       "            <td>295.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>False</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>False</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2</td>\n",
-       "            <td>1</td>\n",
-       "            <td>10</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>11</td>\n",
-       "            <td>6</td>\n",
-       "            <td>17</td>\n",
-       "            <td>1</td>\n",
-       "            <td>None</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>draft</td>\n",
-       "            <td>None</td>\n",
-       "            <td>stock_move</td>\n",
-       "            <td>no</td>\n",
-       "            <td>None</td>\n",
-       "            <td>[FURN_8888] Office Lamp</td>\n",
-       "            <td>5.00</td>\n",
-       "            <td>145.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>145.00</td>\n",
-       "            <td>725.00</td>\n",
-       "            <td>725.00</td>\n",
-       "            <td>145.00</td>\n",
-       "            <td>145.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>False</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>False</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>3</td>\n",
-       "            <td>1</td>\n",
-       "            <td>10</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>11</td>\n",
-       "            <td>6</td>\n",
-       "            <td>16</td>\n",
-       "            <td>1</td>\n",
-       "            <td>None</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>draft</td>\n",
-       "            <td>None</td>\n",
-       "            <td>stock_move</td>\n",
-       "            <td>no</td>\n",
-       "            <td>None</td>\n",
-       "            <td>[FURN_7777] Office Chair</td>\n",
-       "            <td>2.00</td>\n",
-       "            <td>65.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>65.00</td>\n",
-       "            <td>130.00</td>\n",
-       "            <td>130.00</td>\n",
-       "            <td>65.00</td>\n",
-       "            <td>65.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>False</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>False</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>4</td>\n",
-       "            <td>2</td>\n",
-       "            <td>10</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>13</td>\n",
-       "            <td>2</td>\n",
-       "            <td>14</td>\n",
-       "            <td>4</td>\n",
-       "            <td>None</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>draft</td>\n",
-       "            <td>None</td>\n",
-       "            <td>manual</td>\n",
-       "            <td>no</td>\n",
-       "            <td>None</td>\n",
-       "            <td>Virtual Interior Design</td>\n",
-       "            <td>24.00</td>\n",
-       "            <td>75.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>75.00</td>\n",
-       "            <td>1800.00</td>\n",
-       "            <td>1800.00</td>\n",
-       "            <td>75.00</td>\n",
-       "            <td>75.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>True</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>False</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>5</td>\n",
-       "            <td>2</td>\n",
-       "            <td>10</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>13</td>\n",
-       "            <td>2</td>\n",
-       "            <td>15</td>\n",
-       "            <td>4</td>\n",
-       "            <td>None</td>\n",
-       "            <td>1</td>\n",
-       "            <td>1</td>\n",
-       "            <td>draft</td>\n",
-       "            <td>None</td>\n",
-       "            <td>manual</td>\n",
-       "            <td>no</td>\n",
-       "            <td>None</td>\n",
-       "            <td>Virtual Home Staging</td>\n",
-       "            <td>30.00</td>\n",
-       "            <td>38.25</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>38.25</td>\n",
-       "            <td>1147.50</td>\n",
-       "            <td>1147.50</td>\n",
-       "            <td>38.25</td>\n",
-       "            <td>38.25</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>0.00</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>2023-06-08 06:29:24.888890</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>True</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>False</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>0.0</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(1, 1, 10, 1, 1, 11, 6, 42, 1, None, 1, 1, 'draft', None, 'stock_move', 'no', None, '[FURN_6666] Acoustic Bloc Screens', Decimal('3.00'), Decimal('295.00'), Decimal('0.00'), Decimal('295.00'), Decimal('885.00'), Decimal('885.00'), Decimal('295.00'), Decimal('295.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), None, None, datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), 0.0, 0.0, 0.0, None, None, None, 0.0, 0.0, False, None, None, None, None, False, None, 0.0, None, None, None, 0.0, None),\n",
-       " (2, 1, 10, 1, 1, 11, 6, 17, 1, None, 1, 1, 'draft', None, 'stock_move', 'no', None, '[FURN_8888] Office Lamp', Decimal('5.00'), Decimal('145.00'), Decimal('0.00'), Decimal('145.00'), Decimal('725.00'), Decimal('725.00'), Decimal('145.00'), Decimal('145.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), None, None, datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), 0.0, 0.0, 0.0, None, None, None, 0.0, 0.0, False, None, None, None, None, False, None, 0.0, None, None, None, 0.0, None),\n",
-       " (3, 1, 10, 1, 1, 11, 6, 16, 1, None, 1, 1, 'draft', None, 'stock_move', 'no', None, '[FURN_7777] Office Chair', Decimal('2.00'), Decimal('65.00'), Decimal('0.00'), Decimal('65.00'), Decimal('130.00'), Decimal('130.00'), Decimal('65.00'), Decimal('65.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), None, None, datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), 0.0, 0.0, 0.0, None, None, None, 0.0, 0.0, False, None, None, None, None, False, None, 0.0, None, None, None, 0.0, None),\n",
-       " (4, 2, 10, 1, 1, 13, 2, 14, 4, None, 1, 1, 'draft', None, 'manual', 'no', None, 'Virtual Interior Design', Decimal('24.00'), Decimal('75.00'), Decimal('0.00'), Decimal('75.00'), Decimal('1800.00'), Decimal('1800.00'), Decimal('75.00'), Decimal('75.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), None, None, datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), 0.0, 0.0, 0.0, None, None, None, 0.0, 0.0, True, None, None, None, None, False, None, 0.0, None, None, None, 0.0, None),\n",
-       " (5, 2, 10, 1, 1, 13, 2, 15, 4, None, 1, 1, 'draft', None, 'manual', 'no', None, 'Virtual Home Staging', Decimal('30.00'), Decimal('38.25'), Decimal('0.00'), Decimal('38.25'), Decimal('1147.50'), Decimal('1147.50'), Decimal('38.25'), Decimal('38.25'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), Decimal('0.00'), None, None, datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), datetime.datetime(2023, 6, 8, 6, 29, 24, 888890), 0.0, 0.0, 0.0, None, None, None, 0.0, 0.0, True, None, None, None, None, False, None, 0.0, None, None, None, 0.0, None)]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql  \n",
     "select * from sale_order_line limit 5"
@@ -502,6 +114,16 @@
    "metadata": {},
    "source": [
     "# Connect to Mysql server "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connMysql = 'postgresql+psycopg2://{user}:{password}@localhost/RetailDB'.format(\n",
+    "    user='postgres', password='openpgpwd')"
    ]
   },
   {
@@ -533,13 +155,6 @@
     "dfMysql\n",
     "#"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
